[gd_scene load_steps=21 format=2]

[ext_resource path="res://recursos/Interfaz/png/background1.png" type="Texture" id=1]
[ext_resource path="res://recursos/Tipografia/Balloon/Balloon.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Codigos/Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Escenas/Fuegos Artificiales/FuegoArtificial.tscn" type="PackedScene" id=4]
[ext_resource path="res://recursos/Playa, mar, y barcos viejos/PNG/Default size/Ships/ship (7).png" type="Texture" id=5]
[ext_resource path="res://recursos/Playa, mar, y barcos viejos/PNG/Default size/Ships/ship (3).png" type="Texture" id=6]
[ext_resource path="res://recursos/Playa, mar, y barcos viejos/PNG/Default size/Ships/ship (18).png" type="Texture" id=7]
[ext_resource path="res://recursos/Playa, mar, y barcos viejos/PNG/Default size/Ships/ship (5).png" type="Texture" id=8]
[ext_resource path="res://recursos/Interfaz/png/buttons/click/small.png" type="Texture" id=9]
[ext_resource path="res://recursos/Interfaz/png/buttons/hover/small.png" type="Texture" id=10]
[ext_resource path="res://recursos/Interfaz/png/buttons/normal/small.png" type="Texture" id=11]
[ext_resource path="res://Escenas/Boton/Boton.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Titulo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FuegosArtificiales/FuegoArtificial1:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FuegosArtificiales/FuegoArtificial2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FuegosArtificiales/FuegoArtificial3:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Titulo"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Titulo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 184, 832 ), Vector2( 499, 571 ), Vector2( 174, 463 ), Vector2( 8, 300 ), Vector2( 32, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FuegosArtificiales/FuegoArtificial1:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FuegosArtificiales/FuegoArtificial2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FuegosArtificiales/FuegoArtificial3:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Barcos"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Barcos/BarcoBlanco:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -91, 531 ), Vector2( 136, 516 ), Vector2( 319, 557 ), Vector2( 466, 503 ), Vector2( 620, 584 ), Vector2( 832, 583 ), Vector2( 911, 525 ), Vector2( 1025, 564 ), Vector2( 1091, 530 ), Vector2( 1196, 516 ), Vector2( 1367, 516 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Barcos/BarcoBlanco:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 2.5, 2.6, 3, 3.5, 4, 4.4, 4.5, 4.6, 4.7, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -90.863, -86.9793, -47.5191, -99.2557, -86.8125, -68.9577, -64.2052, -83.1606, -94.2299, -88.8441, -80.2041, -94.3174, -70.1449, -89.8293, -111.16, -88.8372, -64.0949, -95.6295, -108.526, -88.417, -88.6408 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Barcos/BarcoAmarillo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 2.3, 2.9, 3, 4, 4.4, 5, 5.2, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -93, 654 ), Vector2( 124, 625 ), Vector2( 341, 668 ), Vector2( 417, 617 ), Vector2( 500, 618 ), Vector2( 510, 628 ), Vector2( 788, 543 ), Vector2( 822, 518 ), Vector2( 675, 516 ), Vector2( 700, 561 ), Vector2( 849, 608 ), Vector2( 964, 642 ), Vector2( 1041, 646 ), Vector2( 1224, 607 ), Vector2( 1385, 610 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Barcos/BarcoAmarillo:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1, 1.2, 1.3, 1.8, 2.3, 2.4, 2.9, 4, 4.4, 5, 5.3, 6, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -89.9996, -103.105, -65.8009, -75.8107, -61.0984, -90.0578, -111.409, -86.6766, -110.771, -144.193, -94.4256, -111.037, -86.9923, -58.7145, -96.4781, 69.119 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Barcos/BarcoCeleste:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1376, 522 ), Vector2( 1181, 519 ), Vector2( 1021, 545 ), Vector2( 883, 547 ), Vector2( 698, 655 ), Vector2( 794, 661 ), Vector2( 722, 674 ), Vector2( 578, 616 ), Vector2( 394, 610 ), Vector2( 144, 605 ), Vector2( -98, 600 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Barcos/BarcoCeleste:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.2, 1.5, 2.5, 4.7, 5, 6.2, 7.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -269.4, -292.59, -274.247, -302.15, -270.56, -268.502, -260.272, -271.002 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Barcos/BarcoRojo:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5.1, 6, 6.5, 7, 7.5, 8, 9, 9.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1382, 662 ), Vector2( 1201, 655 ), Vector2( 1013, 621 ), Vector2( 966, 650 ), Vector2( 957, 575 ), Vector2( 955, 525 ), Vector2( 916, 659 ), Vector2( 843, 679 ), Vector2( 795, 665 ), Vector2( 707, 585 ), Vector2( 641, 541 ), Vector2( 268, 528 ), Vector2( 148, 519 ), Vector2( -75, 517 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Barcos/BarcoRojo:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1.5, 2, 3, 3.5, 5, 5.5, 6, 6.6, 7.5, 8, 8.5, 9, 9.5, 9.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -248.983, -257.478, -267.777, -235.321, -264.797, -304.414, -286.625, -247.257, -243.581, -267.973, -272.865, -289.16, -258.037, -271.141 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Barcos/BarcoBlanco:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -91, 531 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Barcos/BarcoBlanco:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -89.9996 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Barcos/BarcoAmarillo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -93, 654 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Barcos/BarcoAmarillo:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -89.9996 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Barcos/BarcoCeleste:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1370, 524 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Barcos/BarcoCeleste:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -269.4 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Barcos/BarcoRojo:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1369, 639 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Barcos/BarcoRojo:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -269.5 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 350.0
height = 750.0

[sub_resource type="Animation" id=7]
resource_name = "Botones"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Jugar:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.1, 0.1 ), Vector2( 0.11, 0.11 ), Vector2( 0.13, 0.13 ), Vector2( 0.16, 0.16 ), Vector2( 0.18, 0.18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Salir:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.1, 0.1 ), Vector2( 0.11, 0.11 ), Vector2( 0.13, 0.13 ), Vector2( 0.16, 0.16 ), Vector2( 0.18, 0.18 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Jugar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 200, 237 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Jugar:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Salir:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 510, 237 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Salir:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Jugar:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Salir:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Fondo" type="Sprite" parent="."]
scale = Vector2( 0.26305, 0.24 )
texture = ExtResource( 1 )
centered = false

[node name="Titulo" type="Label" parent="."]
margin_left = 32.0
margin_top = 36.0
margin_right = 933.0
margin_bottom = 199.999
custom_colors/font_color = Color( 0.054902, 0.196078, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "(BattleShip)"

[node name="AnimacionesTitulo" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/Titulo = SubResource( 3 )

[node name="FuegosArtificiales" type="Node2D" parent="."]

[node name="FuegoArtificial1" parent="FuegosArtificiales" instance=ExtResource( 4 )]
position = Vector2( 153, 60 )

[node name="FuegoArtificial2" parent="FuegosArtificiales" instance=ExtResource( 4 )]
position = Vector2( 405, 126 )

[node name="FuegoArtificial3" parent="FuegosArtificiales" instance=ExtResource( 4 )]
position = Vector2( 710, 53 )

[node name="Barcos" type="Node2D" parent="."]

[node name="BarcoRojo" type="Sprite" parent="Barcos"]
position = Vector2( 1369, 639 )
rotation = -4.70366
texture = ExtResource( 6 )

[node name="BarcoAmarillo" type="Sprite" parent="Barcos"]
position = Vector2( -93, 654 )
rotation = -1.57079
scale = Vector2( 1, 0.968941 )
texture = ExtResource( 7 )

[node name="BarcoCeleste" type="Sprite" parent="Barcos"]
position = Vector2( 1370, 524 )
rotation = -4.70192
texture = ExtResource( 8 )

[node name="BarcoBlanco" type="Sprite" parent="Barcos"]
position = Vector2( -91, 531 )
rotation = -1.57079
texture = ExtResource( 5 )

[node name="AnimacionesBarcos" type="AnimationPlayer" parent="."]
anims/Barcos = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Jugar" parent="." instance=ExtResource( 12 )]
position = Vector2( 200, 237 )
scale = Vector2( 1e-05, 1e-05 )
imagenNormal = ExtResource( 11 )
imagenSeleccionada = ExtResource( 10 )
imagenClic = ExtResource( 9 )
conTexto = true
texto = "JUGAR"
tamanoLetra = 250
colorDeLetra = Color( 0.054902, 0.196078, 0.411765, 1 )

[node name="Imagen" parent="Jugar" index="0"]
texture = ExtResource( 9 )

[node name="AreaInteractuable" parent="Jugar" index="1"]
rotation = 1.5708
shape = SubResource( 6 )

[node name="Salir" parent="." instance=ExtResource( 12 )]
position = Vector2( 510, 237 )
scale = Vector2( 1e-05, 1e-05 )
imagenNormal = ExtResource( 11 )
imagenSeleccionada = ExtResource( 10 )
imagenClic = ExtResource( 9 )
conTexto = true
texto = "SALIR"
tamanoLetra = 250
colorDeLetra = Color( 0.054902, 0.196078, 0.411765, 1 )

[node name="Imagen" parent="Salir" index="0"]
texture = ExtResource( 9 )

[node name="AreaInteractuable" parent="Salir" index="1"]
rotation = 1.5708
shape = SubResource( 6 )

[node name="AnimacionesBotones" type="AnimationPlayer" parent="."]
anims/Botones = SubResource( 7 )
anims/RESET = SubResource( 8 )

[connection signal="animation_finished" from="AnimacionesTitulo" to="." method="_on_AnimacionesTitulo_animation_finished"]
[connection signal="input_event" from="Jugar" to="." method="_on_Jugar_input_event"]
[connection signal="input_event" from="Salir" to="." method="_on_Salir_input_event"]

[editable path="Jugar"]
[editable path="Salir"]
